Bug 216853 - shutdown dialog does not respect font settings
Summary: shutdown dialog does not respect font settings
Status: RESOLVED FIXED
Alias: None
Product: ksmserver
Classification: Unmaintained
Component: ui (other bugs)
Version First Reported In: 0.4
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Lubos Lunak
URL:
Keywords:
: 211501 305161 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-11-30 20:33 UTC by Michal Svoboda
Modified: 2012-08-17 14:22 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michal Svoboda 2009-11-30 20:33:24 UTC
Version:            (using KDE 4.3.1)
OS:                Linux
Installed from:    Compiled From Sources

The summary is pretty much it. No matter how big fonts i set, i still have to bleed my eyes at the tiny shutdown options.
Comment 1 Michal Svoboda 2009-12-01 20:19:28 UTC
On and also, the usability of that little triangle that expands shutdown options is nil. It is too small as well, plus it's not very intuitive.
Comment 2 Christoph Feck 2009-12-02 04:43:30 UTC
Hm, and I grep'd for setPointSize to find hard coded font sizes in KDE, but this one uses setPixelSize, meaning with high DPI, you really get tiny fonts.

Do the Plasma themes not allow larger buttons for the logout dialog? I don't know much about how Plasma layout/sizing works, but the hard coded setPixelSize calls need to go.

http://websvn.kde.org/trunk/KDE/kdebase/workspace/ksmserver/shutdowndlg.cpp?view=markup
Comment 3 Michal Svoboda 2009-12-02 06:23:07 UTC
I'd vote about removing the setPointSize calls too.
Comment 4 Michal Svoboda 2010-04-12 20:20:40 UTC
Thank you for taking a swift and decisive action in fixing this no-brainer. In the meantime I removed KDE from the affected box since I could not shutdown from the GUI.
Comment 5 Christoph Feck 2010-11-26 21:06:54 UTC
If this is a no-brainer, where is the patch? I would like to apply it for 4.6.
Comment 6 sml 2011-12-12 12:52:39 UTC
This is a Duplicate of https://bugs.kde.org/show_bug.cgi?id=211501
Comment 7 Jekyll Wu 2012-01-02 15:30:44 UTC
*** Bug 211501 has been marked as a duplicate of this bug. ***
Comment 8 Lamarque V. Souza 2012-02-07 22:25:36 UTC
Git commit 49e65509f9bada70382d2768670a31b568f28ce4 by Lamarque V. Souza.
Committed on 07/02/2012 at 23:19.
Pushed by lvsouza into branch 'master'.

Port shutdown dialog to QML.

REVIEW: 103621
Related: bug 175284

M  +1    -2    ksmserver/shutdown.cpp

http://commits.kde.org/kde-workspace/49e65509f9bada70382d2768670a31b568f28ce4
Comment 9 Christoph Feck 2012-08-16 12:09:55 UTC
*** Bug 305161 has been marked as a duplicate of this bug. ***
Comment 10 Christoph Feck 2012-08-17 14:22:16 UTC
*** Bug 305161 has been marked as a duplicate of this bug. ***