Port shutdown dialog to QML.

REVIEW: 103621
BUG: 216853
BUG: 175284